[gd_scene load_steps=4 format=2]

[ext_resource path="res://tool/WaveDesigner/WavePart.gd" type="Script" id=1]
[ext_resource path="res://gui/theme.tres" type="Theme" id=2]
[ext_resource path="res://gui/panels/panel_inside_frame.tres" type="StyleBox" id=3]

[node name="WavePart" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 2000, 250 )
rect_pivot_offset = Vector2( -2682, -60 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )

[node name="WaveElementConnectors" type="Control" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 12.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="WaveElementContainer" type="Control" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 12.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 233.0
margin_bottom = 1068.0
mouse_filter = 2
size_flags_horizontal = 0
theme = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="Controls"]
margin_right = 221.0
margin_bottom = 222.0
columns = 2

[node name="UpButton" type="Button" parent="Controls/GridContainer"]
margin_right = 107.0
margin_bottom = 57.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "up"

[node name="DeleteButton" type="Button" parent="Controls/GridContainer"]
margin_left = 123.0
margin_right = 221.0
margin_bottom = 57.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "delete"

[node name="DownButton" type="Button" parent="Controls/GridContainer"]
margin_top = 73.0
margin_right = 107.0
margin_bottom = 130.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "down"

[node name="LayoutButton" type="Button" parent="Controls/GridContainer"]
margin_left = 123.0
margin_top = 73.0
margin_right = 221.0
margin_bottom = 130.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "layout"

[node name="Label2" type="Label" parent="Controls/GridContainer"]
margin_top = 151.0
margin_right = 107.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Spawn at"

[node name="LineEdit" type="LineEdit" parent="Controls/GridContainer"]
margin_left = 123.0
margin_top = 146.0
margin_right = 221.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Label3" type="Label" parent="Controls/GridContainer"]
margin_top = 197.0
margin_right = 107.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Weight: "

[node name="WeightLabel" type="Label" parent="Controls/GridContainer"]
margin_left = 123.0
margin_top = 197.0
margin_right = 221.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 6

[connection signal="gui_input" from="." to="." method="_on_WavePart_gui_input"]
[connection signal="pressed" from="Controls/GridContainer/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="Controls/GridContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Controls/GridContainer/DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="Controls/GridContainer/LayoutButton" to="." method="layout"]
